apps/accounts-receivable/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-receivable
  labels:
    app: accounts-receivable
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: accounts-receivable
